--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,7 +49,7 @@ img {
 body {
   font-family: "Raleway", sans-serif;
   font-size: 1rem;
-  /* background-color: var(--gray-bg-color); */
+  background-color: #f1f3f6;
   height: 100vh;
   overflow-x: hidden;
   margin: 0;
